# cruscotto-italia

./: .env.example  .gitignore  DECISIONS.md  DESIGN.md  NEXT_SESSION.md  README.md
chatbot/: PROGETTO_CHATBOT_CRUSCOTTO.md  README.md
deploy/: CHECKLIST_MARTEDI.md  HANDOFF.md  README.md  SETUP_CRON_NOTES.md  provision-python.sh
docs/: CHECKLIST_MARTEDI.md  INFRASTRUCTURE.md  PATTERN_ETL_ISTAT.md  SECRETS.md  SECURITY.md  SERVER-INFRA.md  data-licenses.md
etl/: __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt
etl/lib/: duck.py  local_lookup.py  manifest.py  r2.py  shard_io.py
etl/lib/static/: comuni-soppressi.csv
etl/sources/: agcom_bbmap.py  anac.py  anagrafica.py  anncsu.py  aria.py  asia.py  bdap.py  bdap_mop.py  bdap_siope.py  beni_culturali.py  build_meteo.py  carburanti.py  catasto_age.py  censimento.py  classificazione_sismica.py  cultural_on.py  dashboard.py  demografia.py  immobili_pa.py  istat_profilo.py  istat_turismo.py  pendolarismo.py  pnrr_progetti.py  pun.py  redditi.py  runts.py  sanita_mds.py  scuole.py  siope.py  territorio.py  veicoli.py
frontend/: LICENSE.txt  METADATI.csv  about.html  accessibilita.html  comune.html  demo_immobili_pa.html  index.html  robots.txt
scripts/: bootstrap.sh  catasto_semestrale.sh  detect_catasto_anomalies.py  pa11y-all.sh  pa11y-anac.sh  pa11y-anncsu.sh  pa11y-aria.sh  pa11y-asia.sh  pa11y-banda-larga.sh  pa11y-beni-culturali.sh  pa11y-carburanti.sh  pa11y-catasto.sh  pa11y-censimento.sh  pa11y-meteo.sh  pa11y-morfologia.sh  pa11y-pendolarismo.sh  pa11y-pun.sh  pa11y-runts.sh  (+6 more)
(+7993 files in other folders)
